JumpScript/tests/baselines/reference/classCannotExtendVar.errors.txt
tests/cases/compiler/classCannotExtendVar.jump(1,5): error TS2300: Duplicate identifier 'Markup'.
tests/cases/compiler/classCannotExtendVar.jump(3,7): error TS2300: Duplicate identifier 'Markup'.


==== tests/cases/compiler/classCannotExtendVar.jump (2 errors) ====
    var Markup;
        ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
    
    class Markup {
          ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    